Statistik und user finalized
added captions and a few graphics

--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_Statistic.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_Statistic.tex
@@ -38,7 +38,7 @@ Die einzelnen Werte für die Statistik werden in einer SQLite Datenbank in ihren
 \ \\
 Dabei ist jeder Eintrag eine eigene Entität welche das Interface DataPointInterface implementiert.
 
-\begin{lstlisting}
+\begin{lstlisting} [caption={Ein Datenpunkt für die Graphen.},label=DescriptiveLabel]
 public class MoodTime implements DataPointInterface {
     private double _timestamp;
     private double _mood;
