--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_User.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_User.tex
@@ -25,6 +25,12 @@ Weiters kann er sich hier über den Facebook-Login-Button mit seinem Facebook Ac
 	\end{subfigure}
 	\hfil
 	\caption{Der erste Schritt der Usererstellung.}
+	\begin{subfigure}[b]{0.3\textwidth}
+	\includegraphics[scale=0.55]{img/User_facebooklogin}
+	\end{subfigure}
+	\hfil
+	\caption{Der Loginscreen von Facebook.}
+	
 \end{figure}
 \newpage
 \paragraph{Schritt 2}\ \\
