--- a/FIPLY/Dokumente/FIPLY Latex/all_personas.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/all_personas.tex
@@ -6,22 +6,31 @@
 	\section{Auftraggeber}
 	\line(1,0){390}
 	\ \\
-	\ \\
 	\newline\newline
 	{\Large David Lindenbauer}
 	\ \\
 	\line(1,0){200}
 	\begin{figure}[H]
-		\begin{subfigure}[b]{\textwidth}
+		\begin{subfigure}[b]{0.6\textwidth}
 			Dipl. Fitness- \& Personaltrainer
 			\newline\newline
 			Email: david.lindenbauer@gmx.at
 			\newline
+			\newline
+			\newline
+			\newline
+			\newline
+			\newline
+			\newline
+			\end{subfigure}
+		\begin{subfigure}[b]{0.6\textwidth}
+			\begin{subfigure}[b]{0.2\textwidth}
+				\includegraphics[scale=0.2]{img/div}
+			\end{subfigure}
 		\end{subfigure}
 	\end{figure}
 	\section{Betreuungslehrer}
 	\line(1,0){390}
-	\ \\
 	\ \\
 	\newline\newline
 	{\Large Mag. Dr. Prof. Thomas Stütz}
@@ -44,7 +53,7 @@
 		\end{subfigure}
 		\begin{subfigure}[b]{0.6\textwidth}
 			\begin{subfigure}[b]{0.2\textwidth}
-				\includegraphics[scale=1]{img/stuetz}
+				\includegraphics[scale=0.9]{img/stuetz}
 			\end{subfigure}
 		\end{subfigure}
 	\end{figure}
