--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_Trainingsplan.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_Trainingsplan.tex
@@ -21,11 +21,12 @@
 	Ein Trainingsplan besteht aus unterschiedlichen Phasen - je nach Trainingsziel (Muskelaufbau, Maximalkraft, Kraftausdauer (=Gesundheit)) unterschiedlich. Jede Trainingsphase besitzt einen empfohlenenen RM-Wert (0\%-100\%), mit welchem der Benutzer "uben kann. Alle empfohlenen Werte (Satzpausen, RM-Wert, Anzahl der Trainingstage,...) sind jediglich eine Option für den Benutzer und können auch frei gewählt werden.
 	Dabei zu bedenken ist, dass verschiedene Trainingsphasen bei verschiedenen Trainingsziele eine unterschiedliche Reihenfolge haben.
 	Hier eine Visualisierung der Reihenfolge der Trainingsphasen:
-	\begin{center}
-		\includegraphics[scale=0.4]{img/VisualisierungTrainingsplan}
-	\end{center}
+	\begin{figure}[H]
+		\centering
+		\includegraphics[scale=0.6]{img/VisualisierungTrainingsplan}
+		\caption{Vorgangsvisualisierung der Trainingsplanphasen}
+	\end{figure}
 	
-	\newpage
 	\subsection{Phase 1: Allgemein}
 	Phase 1 ist für jeden gleich, unabhängig vom Trainingsziel, und dient dem Eintrainieren. Am Anfang wird festgehalten, ob der Benutzer einen untrainierten oder bereits trainierten Körper besitzt. Anhand dessen und dem ausgewählten Schema (Bauch - Beine - Po, Oberkörper/Arme, Stabilisation (R"ucken \& Gesundheit)) werden in dieser Phase die "Ubungen ausgewählt und die Anzahl der S"atze/Wiederholungen bestimmt:
 	\begin{center}
@@ -89,7 +90,6 @@
 			\end{tabular} \\
 		\end{center}
 		
-	\newpage	
 	\subsection{Phase 2: Kraftausdauer (Gesundheit)}
 	Phase 2: Kraftausdauer (Gesundheit) besteht aus 2 "Phase 1: Allgemein Trainingstagen" in der Woche. Zusätzlich besteht das Training aus entweder ein Mal w"ochentlich Phase 2: Muskelaufbau -training oder ein Mal w"ochentlich Stabilit"ats"ubungen. Welche der Benutzer ausf"uhren will, kann er selbst am Anfang entscheiden, je nachdem ob er seinen K"orper formen will, oder ob er es als Gesundheits- oder Reha"ubung macht.
 	\newline
@@ -124,7 +124,6 @@
 		\end{tabular} 
 	\end{center}
 		
-	\newpage	
 	\subsection{Phase 2: Muskelaufbau \newline Phase 3: Kraftausdauer}	
 	Wenn man als Trainingsziel \grqq{}Muskelaufbau\grqq{} gewählt hat, kommt diese nach Phase 1, oder wenn man Phase 2: Kraftausdauer (Gesundheit) abgeschlossen hat. In dieser Phase kommt viel Hantel- und Seilzugtraining zum Einsatz. Dabei ist zu beachten, dass die Schwierigkeit der "Ubung egal ist. Es wird davon ausgegangen, dass ein Anf"anger nach der 8-w"ochigen Phase 1 bereits fit genug ist, um alle "Ubungen die sich im Trainingskatalog befinden zu meistern. 
 	\newline
@@ -149,7 +148,6 @@
 	\end{center}
 	Nach Phase 3: Kraftausdauer ist wieder von Anfang an (Phase 1: Allgemein) zu beginnen. Man kann aber auch aufh"oren oder sich einen neuen Trainingsplan generieren lassen.
 	
-	\newpage
 	\subsection{Phase 2: Maximalkraft \newline Phase 3: Muskelaufbau}
 	Diese Phase ist für das Maximalkrafttrainingsziel die Phase 2 und f"ur das Muskelaufbautrainingsziel die Phase 3. Nur Fortgeschrittene oder User die die Phase 2: Muskelaufbau durchgef"uhrt haben, k"onnen diese Phase beginnen.
 	\newline
@@ -177,7 +175,6 @@
 		\end{center}
 	Nach Phase 3: Muskelaufbau ist der Trainingsplan zu ende. Nun kann man ihn erneut starten (vom Anfang an), h"ort auf, oder l"asst sich erneut einen generieren.
 	
-	\newpage
 	\subsection{Phase 3: Maximalkraft}
 	Phase 3: Maximalkraft kommt nach Phase 2: Maximalkraft. Hierbei wird jediglich 2 Mal w"ochentlich trainiert. Die Tage kann sich der Benutzer wieder aussuchen, einzige Bedingung sind 48 Stunden Erholungszeit. 
 	Die Phase besteht wieder aus Seilzug- und Hantel"ubungen, insgesamt 6 mit jeweils 2 Wiederholungen zu 5 Sätzen. Hierbei wird das Trainingsgewicht erneut f"ur ca. 95\%RM gew"ahlt.
@@ -197,7 +194,6 @@
 		\end{center}
 	Nach Phase 3: Maximalkraft ist der Trainingsplan zu Ende. Nun kann man ihn erneut starten (vom Anfang an), h"ort auf, oder l"asst sich erneut einen generieren.
 	
-	\newpage
 	\subsection{Mobilisation}
 	Die Mobilisation beim Maximalkrafttraining dient dazu, den K"orper auf das kommende schwere Training vorzubereiten. 
 	Sie besteht aus:
