--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_icons.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_icons.tex
@@ -4,6 +4,7 @@
 	
 \begin{document}
 	\ \\
+	\subsection{Design}
 	Die Hintergrundgfarbe aller Activities ist ein starkes Grau, die Entscheidung viel schlussendlich auf die Farbe mit dem Farbcode \#363534. Die dazu kontraste Signalfarbe ist ein eindeutiges Orange, \#ff8400. Der Kontrast dieser zwei Farben ist ein guter Blickfang und angenehm für das Augen. Als Kontur wird ein einfaches Schwarz (\#000000) herangezogen. Durch diese drei Hauptfarben wird dem Benutzer ein visuell-angenehmes Farbenspektrum geboten, wodurch eine klare Übersicht über alle Elemente entsteht.
 	\begin{itemize}
 	 	\item Hauptfarbe/Kontrastfarbe: \#ff8400 (Orange)
@@ -12,7 +13,7 @@
 	\end{itemize}
 	Alle weitere Farben entsprechen einem verwandten Farbton, die jedoch nicht erwähnenswert sind.
 	
-	\subsection{FIPLY-Logo} 
+	\subsubsection{FIPLY-Logo} 
 	Am Anfang war das Ziel des FIPLY-Logos, dem Benutzer bei der Ansicht des Bildes intuitiv zu vermitteln, dass es sich um eine Fitness Applikation handelt. Dies geschieht einfach mit verschiedenen fitnesstypischen Formen, wie zum Beispiel eine Hantel, ein laufender Mensch, ein Muskulöser Arm oder auch nur einen Turnschuh. Da die Applikation das Generieren eines Fitnessplans anbietet, wurde entschieden, eine Art Kalender-Logo daraus zu machen. 
 	\begin{figure}[H]
 		\begin{subfigure}[b]{1\textwidth}
@@ -34,7 +35,7 @@
 			\caption{Version 2 des FIPLY Logos}
 		\end{subfigure}
 	\end{figure}
-	\subsection{Kontrollelemente}
+	\subsubsection{Kontrollelemente}
 	Als Hintergrundfarbe der Kontrollelemente wird die Hauptfarbe angwendet. Bei normalen Textelementen kommt die Hauptfarbe zum Einsatz, bei jeden anderen texthaltigen Elementen wird etwa die Konturfarbe oder Hintergrundfarbe eingesetzt. Dies wird mittels Icons umgesetzt. Das jeweilig erstellte Icon wird als Hintergrundbild eines Kontrollelements programmiert. Folgende wichtige Icons wurden für Kontrollelemente eingesetzt, das jeweilige Icon wird eingesetzt für *:
 	
 	\begin{figure}[H]
