--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_intellij.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_intellij.tex
@@ -7,6 +7,6 @@
 \subsubsection{IntelliJ}
 Teile der App wurden mit IntelliJ entwickelt, da diese Entwicklungsumgebung einen komfortablen Browser für Datenbanken bietet.
 Dieser Browser ist nicht in Android Studio verfügbar, deshalb wird zu IntelliJ gegriffen, da es als großer Bruder Android Studios zwar nicht optimiert für die Entwicklung von Android Apps ist, aber mehr Funktionen, wie beispielsweise den erwähnten Datenbankenbrowser beinhaltet.
-Die Bedienung und die Oberfläche ist der von Android Studio sehr ähnlich. 
+Die Bedienung und die Oberfläche ist jener von Android Studio sehr ähnlich. 
 
 \end{document}
