--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_NavigationDrawer.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_NavigationDrawer.tex
@@ -22,7 +22,7 @@ Erneutes Klicken auf dieses Icon oder Streichen nach links versteckt den Navigat
 \end{figure}
 
 \newpage
-\begin{lstlisting}
+\begin{lstlisting}[caption={Layout XML File eines NavigationDrawers},label=DescriptiveLabel]
 <android.support.v4.widget.DrawerLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
@@ -47,7 +47,6 @@ Erneutes Klicken auf dieses Icon oder Streichen nach links versteckt den Navigat
 
 </android.support.v4.widget.DrawerLayout>
 \end{lstlisting}
-\ \\
 Um einen NavigationDrawer zu einer App hinzuzufügen, wird ein DrawerLayout als Root-View in dem Layout XML File einer Activity deklariert. 
 Eine Root-View beinhaltet alle anderen Ansichten der App. 
 In diesem DrawerLayout wird anschließend eine View angelegt, die dazu verwendet wird den Hauptinhalt der App darzustellen.
@@ -65,7 +64,7 @@ Dieses Layout dient als Container für Fragments, die die einzelnen Ansichten de
 Die Elemente des NavigationDrawers werden in der ListView navlist definiert.
 
 \newpage
-\begin{lstlisting}
+\begin{lstlisting}[caption={Minimaler Code eines NavigationDrawers},label=DescriptiveLabel]
 public class MainActivity extends AppCompatActivity {
 	ListView mDrawerList;
 	ArrayAdapter<String> mAdapter;
@@ -98,12 +97,10 @@ public class MainActivity extends AppCompatActivity {
 			}
 }
 \end{lstlisting}
-\ \\
 Das ist der minimale Code, um einen funktionierenden NavigationDrawer zu erstellen.
 Will man das Design und Verhalten des Icons, zum Öffnen des NavigationDrawers, ändern, ist mehr Code nötig.
 Dieser Code wird ebenfalls im onCreate der Activity, die einen NavigationDrawer erhalten soll, ausgeführt.
-\ \\
-\begin{lstlisting}
+\begin{lstlisting}[caption={Erweiterung des NavigationDrawers um ihn visuell ansprechender zu machen},label=DescriptiveLabel]
 mDrawerToggle = new ActionBarDrawerToggle(this, mDrawerLayout,
 	R.string.drawer_open, R.string.drawer_close) {
 	...
