bib and latex updated
finalized

--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_latex.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_latex.tex
@@ -4,8 +4,10 @@
 %\date{26. Februar 2016}
 
 \begin{document}
-\subsubsection{Latex}
-\paragraph{Miktex}\ \\
+\subsubsection{LaTeX}
+LaTeX ist ein Softwarepaket, welches TeX implementiert. TeX ist eine `What you mean is what you get` Programmiersprache zur Erzeugung von Textdokumenten. Am besten ist LaTeX geeignet für wissenschaftliche Artikel und Diplom-, Masterarbeiten [\citetitle{lxLatex} \cite{lxLatex}].
+
+\paragraph{MiKTeX}\ \\
 MiKTeX ist eine TeX-Distribution für Microsofts Windows-Betriebssysteme. Die ergänzenden MiKTeX Tools wurden ebenso auf GNU/Linux portiert [\citetitle{lxMiktex} \cite{lxMiktex}].
 
 \paragraph{TeXworks}\ \\
