--- a/FIPLY/Dokumente/FIPLY Latex/literatur.bib
+++ b/FIPLY/Dokumente/FIPLY Latex/literatur.bib
@@ -236,6 +236,13 @@
   url =   {https://support.google.com/googleplay/android-developer/answer/6151557}
 }
 
+@Misc{lxLatex,
+  title = {LaTeX},
+  month = mar,
+  year =  {2016},
+  url =   {https://de.wikipedia.org/wiki/LaTeX}
+}
+
 @Misc{lxMiktex,
   title = {MiKTeX},
   month = mar,
