--- a/FIPLY/Dokumente/FIPLY Latex/all_pflichtenheft.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/all_pflichtenheft.tex
@@ -23,13 +23,19 @@
 	\begin{figure}[H]
 		\begin{subfigure}[b]{0.3\textwidth}
 			\centering
-			\includegraphics[scale=0.6]{img/UseCaseDiagram}
+			\includegraphics[scale=0.7]{img/UseCaseDiagram}
 		\end{subfigure}
 		\caption{Das Use-Case Diagramm zu der Applikation}
 	\end{figure}
 	\newpage
 	\subsubsection{Systemarchitektur}
-	
+	\begin{figure}[H]
+		\begin{subfigure}[b]{0.3\textwidth}
+			\centering
+			\includegraphics[scale=0.6]{img/Systemarchitektur}
+		\end{subfigure}
+		\caption{Das Use-Case Diagramm zu der Applikation}
+	\end{figure}
 	\subsubsection{Use Case Details}
 	UseCase 1: Übungskatalog einsehen
 		\ \\
