Pdfs not ignored anymore

--- a/FIPLY/Dokumente/FIPLY Latex/all_pflichtenheft.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/all_pflichtenheft.tex
@@ -23,9 +23,9 @@
 	\begin{figure}[H]
 		\begin{subfigure}[b]{0.3\textwidth}
 			\centering
-			\includegraphics[scale=0.7]{img/UseCaseDiagram}
+			\includegraphics[scale=1]{img/UseCaseDiagram}
 		\end{subfigure}
-		\caption{Das Use-Case Diagramm zu der Applikation}
+		\caption{Die Systemarchitektur zu der Applikation}
 	\end{figure}
 	\newpage
 	\subsubsection{Systemarchitektur}
