--- a/FIPLY/Dokumente/FIPLY Latex/fiplystyle.sty
+++ b/FIPLY/Dokumente/FIPLY Latex/fiplystyle.sty
@@ -14,7 +14,8 @@
 \usepackage{pbox}
 \usepackage{amsmath}
 \usepackage{wrapfig}
-\usepackage{pdfpages} 
+\usepackage{pdfpages}
+\usepackage[automark]{scrlayer-scrpage} 
 
 \addbibresource{literatur.bib}
 
